# pypeds

./: .gitignore  README.md  TODO.md  VS_Code_hosted_by_Colab.ipynb  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt  setup.py
data/: network1.pickle  network2.pickle
dev/: views_working.py
logo/: pypeds-logo.R
pypeds/: TODO.md  __init__.py  archive.py  data.py  datasets.py  ipeds.py  utils.py  view.py  views.py  viz.py
test-notebooks/: Test Classes.ipynb  Untitled.ipynb  test-cases.ipynb  test-package.ipynb  test-survey-classes.py  test-zip-parser.ipynb
tests/: c_a.py  efc.py  efd.py  ff1.py  ff2.py  hd.py  ic.py  icay.py  om.py  sfa-trends-network.py  sfa.py  test-survey-classes.py  test_ipeds.py  v_migration.py  v_program_completions.py  v_tuition_discounting.py
tests/static/: adm2020.csv  c2020_a.csv  ef2017c.csv  ef2017d.csv  f1920_f1a.csv  f1920_f2.csv  hd2020.csv  ic2009_ay.csv  ic2020.csv  om2017.csv  sfa1617.csv
utils/: load-save-r-network-datasets.py
