[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "pypeds"
author = "Brock Tibert"
author-email = "btibert3@gmail.com"
maintainer = "theletterjeff"
home-page = "https://github.com/Btibert3/pypeds"
requires=[
    "requests",
    "pandas",
    "altair",
    "dfply",
    "numpy",
    "xlrd",
]
requires-python=">=3.6"
description-file="README.md"
